--- a/config.json.example
+++ b/config.json.example
@@ -1,17 +1,17 @@
 {
-  "rss_feeds": [
-    "https://feeds.bbci.co.uk/news/rss.xml",
-    "https://rss.cnn.com/rss/edition.rss",
-    "https://feeds.reuters.com/reuters/topNews"
-  ],
-  "email": {
-    "to": "user@example.com",
-    "smtp_server": "smtp.gmail.com",
-    "smtp_port": 587,
-    "username": "your-email@gmail.com"
-  },
-  "schedule": {
-    "hour": 8,
-    "minute": 0
-  }
-} 
+    "rss_feeds": [
+        "http://feeds.bbci.co.uk/news/rss.xml",
+        "http://feeds.reuters.com/reuters/topNews"
+    ],
+    "email": {
+        "to": "your_email@example.com",
+        "smtp_server": "smtp.example.com",
+        "smtp_port": 587,
+        "username": "your_username",
+        "password": "${SMTP_PASSWORD}" 
+    },
+    "schedule": {
+        "hour": 7,
+        "minute": 0
+    }
+}
