--- a/Caddyfile
+++ b/Caddyfile
@@ -1,3 +1,153 @@
-api.yourdomain.com {
-    reverse_proxy app:8000
+# Daily Scribe Caddy Configuration
+# Reverse proxy with automatic HTTPS and security headers
+
+# Global configuration must be first
+{
+	# Admin API configuration
+	admin {$CADDY_ADMIN:0.0.0.0:2019}
+	
+	# Email for Let's Encrypt (set via environment variable)
+	email {$CADDY_EMAIL:admin@example.com}
+	
+	# ACME server (use staging for testing)
+	# acme_ca https://acme-staging-v02.api.letsencrypt.org/directory
+	
+	# Local development certificates (uncomment for local testing)
+	# local_certs
+	
+	# Automatic HTTPS configuration
+	auto_https on
+	
+	# Grace period for config reloads
+	grace_period 10s
+}
+
+# Main domain configuration
+{$DOMAIN:localhost} {
+	# Reverse proxy to the app container
+	reverse_proxy app:8000 {
+		# Health check configuration
+		health_uri /healthz
+		health_interval 30s
+		health_timeout 10s
+		
+		# Load balancing (for future scaling)
+		lb_policy round_robin
+		
+		# Header forwarding
+		header_up Host {host}
+		header_up X-Real-IP {remote_host}
+	}
+	}
+
+	# Security headers
+	header {
+		# Enable HSTS
+		Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
+		
+		# Prevent clickjacking
+		X-Frame-Options "DENY"
+		
+		# Prevent MIME type sniffing
+		X-Content-Type-Options "nosniff"
+		
+		# XSS protection
+		X-XSS-Protection "1; mode=block"
+		
+		# Referrer policy
+		Referrer-Policy "strict-origin-when-cross-origin"
+		
+		# Content Security Policy (adjust as needed)
+		Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self'; connect-src 'self'; frame-ancestors 'none';"
+		
+		# Remove server information
+		-Server
+		
+		# Add application info
+		X-Powered-By "Daily Scribe"
+	}
+
+	# CORS configuration for API endpoints
+	@api path /api/* /healthz /docs /openapi.json
+	handle @api {
+		header {
+			Access-Control-Allow-Origin "*"
+			Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS"
+			Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With"
+			Access-Control-Max-Age "86400"
+		}
+		
+		# Handle preflight requests
+		@options method OPTIONS
+		respond @options 204
+		
+		reverse_proxy app:8000
+	}
+
+	# Static file handling with caching
+	@static path *.css *.js *.png *.jpg *.jpeg *.gif *.ico *.svg *.woff *.woff2
+	handle @static {
+		header Cache-Control "public, max-age=31536000, immutable"
+		reverse_proxy app:8000
+	}
+
+	# Access logging
+	log {
+		output file /var/log/caddy/access.log {
+			roll_size 100mb
+			roll_keep 5
+			roll_keep_for 720h
+		}
+		format console
+		level INFO
+	}
+
+	# Error handling
+	handle_errors {
+		@5xx expression {http.error.status_code} >= 500
+		handle @5xx {
+			respond "Service temporarily unavailable. Please try again later." 503 {
+				close
+			}
+		}
+		
+		@4xx expression {http.error.status_code} >= 400 && {http.error.status_code} < 500
+		handle @4xx {
+			respond "Page not found." 404 {
+				close
+			}
+		}
+	}
+}
+
+# HTTP to HTTPS redirect (global)
+http://{$DOMAIN:localhost} {
+	redir https://{host}{uri} permanent
+}
+
+# Health check endpoint for load balancers (if needed)
+:8080 {
+	respond /health "OK" 200
+	
+	# Metrics endpoint (Caddy admin API proxy)
+	handle /metrics {
+		reverse_proxy localhost:2019
+	}
+}
+	
+	# Development-friendly headers (less strict)
+	header {
+		X-Frame-Options "SAMEORIGIN"
+		X-Content-Type-Options "nosniff"
+		Access-Control-Allow-Origin "*"
+		Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS"
+		Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With"
+	}
+	
+	# Development logging
+	log {
+		output stdout
+		format console
+		level DEBUG
+	}
 }
