--- a/.env.example
+++ b/.env.example
@@ -15,10 +15,25 @@ DOMAIN=localhost
 CADDY_ADMIN=0.0.0.0:2019
 
 # Litestream Backup Configuration
-LITESTREAM_ACCESS_KEY_ID=your_access_key_id
-LITESTREAM_SECRET_ACCESS_KEY=your_secret_access_key
-GCS_BUCKET=your_gcs_bucket_name
-GCS_PATH=daily-scribe
+# Choose one authentication method:
+
+# Method 1: Service Account (Recommended for production)
+# Download service account JSON from Google Cloud Console
+# and place it in the project root as gcs-service-account.json
+GCS_SERVICE_ACCOUNT_PATH=./gcs-service-account.json
+
+# Method 2: Access Keys (Alternative authentication)
+LITESTREAM_ACCESS_KEY_ID=your_gcs_access_key_id
+LITESTREAM_SECRET_ACCESS_KEY=your_gcs_secret_access_key
+
+# GCS Configuration
+GCS_BUCKET=your-daily-scribe-backups
+GCS_REGION=us-central1
+
+# Backup Settings (these override litestream.yml defaults if needed)
+# LITESTREAM_SYNC_INTERVAL=10s
+# LITESTREAM_SNAPSHOT_INTERVAL=1h
+# LITESTREAM_RETENTION=720h
 
 # System Configuration
 TZ=UTC
