--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -37,11 +37,25 @@ services:
       # Use development-specific Caddyfile
       - ./Caddyfile.dev:/etc/caddy/Caddyfile:ro
 
-  # Litestream runs normally in development but with local storage
+  # Litestream development configuration
   litestream:
-    # Override command to use local development configuration
-    command: ["echo", "Litestream disabled in development - using local database only"]
-    restart: "no"
+    # For development, use mock configuration to test without real GCS
+    environment:
+      - GCS_BUCKET=development-mock-bucket
+      - GCS_REGION=us-central1
+      # Use example service account for testing
+      - GOOGLE_APPLICATION_CREDENTIALS=/etc/gcs/service-account-example.json
+    volumes:
+      # Mount example service account for development testing
+      - ./gcs-service-account.json.example:/etc/gcs/service-account-example.json:ro
+    # Keep container running but with less aggressive health checks
+    healthcheck:
+      interval: 60s
+      timeout: 15s
+      retries: 2
+    # Uncomment to disable Litestream in development
+    # command: ["echo", "Litestream disabled in development - using local database only"]
+    # restart: "no"
 
 # Development volumes - simplified to avoid conflicts
 volumes:
