--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -105,23 +105,38 @@ services:
     container_name: daily-scribe-litestream
     restart: unless-stopped
     environment:
+      # Google Cloud Storage credentials
+      - GOOGLE_APPLICATION_CREDENTIALS=/etc/gcs/service-account.json
+      - GCS_BUCKET=${GCS_BUCKET}
+      - GCS_REGION=${GCS_REGION:-us-central1}
+      # Alternative: Use access keys instead of service account
       - LITESTREAM_ACCESS_KEY_ID=${LITESTREAM_ACCESS_KEY_ID}
       - LITESTREAM_SECRET_ACCESS_KEY=${LITESTREAM_SECRET_ACCESS_KEY}
-      - GCS_BUCKET=${GCS_BUCKET}
-      - GCS_PATH=${GCS_PATH:-daily-scribe}
     volumes:
-      - daily_scribe_data:/data
+      # Data volume containing the SQLite database
+      - daily_scribe_data:/app/data
+      # Litestream configuration
       - ./litestream.yml:/etc/litestream.yml:ro
+      # GCS service account key (create this file or use environment variables)
+      # If file doesn't exist, Litestream will use environment variables instead
+      - ./gcs-service-account.json:/etc/gcs/service-account.json:ro
+      # Logs volume for backup monitoring
       - daily_scribe_logs:/var/log/daily-scribe
+    ports:
+      # Expose metrics endpoint for monitoring (internal only)
+      - "9090:9090"
+      - "9091:9091"
     networks:
       - daily_scribe_internal
     command: replicate
     healthcheck:
-      test: ["CMD", "litestream", "version"]
-      interval: 60s
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:9090/metrics", "||", "exit", "1"]
+      interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 10s
+      start_period: 15s
+    # Remove dependency to avoid circular dependency
+    # Litestream can start independently and will wait for database to be available
 
 # Named volumes for data persistence
 volumes:
