--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - DB_PATH=/data/digest_history.db
       - DB_TIMEOUT=${DB_TIMEOUT:-30}
       - GEMINI_API_KEY=${GEMINI_API_KEY}
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
       - SMTP_PASSWORD=${SMTP_PASSWORD}
       - PYTHONPATH=/app/src:/app
       - PYTHONUNBUFFERED=1
@@ -48,6 +49,7 @@ services:
       - DB_PATH=/data/digest_history.db
       - DB_TIMEOUT=${DB_TIMEOUT:-30}
       - GEMINI_API_KEY=${GEMINI_API_KEY}
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
       - SMTP_PASSWORD=${SMTP_PASSWORD}
       - PYTHONPATH=/app/src:/app
       - PYTHONUNBUFFERED=1
