--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,32 @@ services:
       - litestream
     command: ["python", "-m", "uvicorn", "src.api:app", "--host", "0.0.0.0", "--port", "8000"]
 
+  # Daily Scribe React Frontend
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+      target: production
+    image: daily-scribe-frontend:latest
+    container_name: daily-scribe-frontend
+    restart: unless-stopped
+    environment:
+      - NODE_ENV=production
+    volumes:
+      - ./frontend/.env.production:/app/.env.production:ro
+    networks:
+      - daily_scribe_internal
+    ports:
+      - "3000:80"
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://127.0.0.1:80/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 5s
+    depends_on:
+      - app
+
   # Daily Scribe Cron Jobs
   cron:
     build:
@@ -66,7 +92,7 @@ services:
       - app
       - litestream
     healthcheck:
-      test: ["CMD", "pgrep", "-f", "supercronic"]
+      test: ["CMD", "which", "supercronic"]
       interval: 60s
       timeout: 10s
       retries: 3
@@ -80,6 +106,7 @@ services:
     environment:
       - DOMAIN=${DOMAIN:-localhost}
       - CADDY_ADMIN=${CADDY_ADMIN:-0.0.0.0:2019}
+      - CADDY_EMAIL=${CADDY_EMAIL:-admin@daily-scribe.duckdns.org}
     ports:
       - "80:80"
       - "443:443"
@@ -94,6 +121,7 @@ services:
       - daily_scribe_external
     depends_on:
       - app
+      - frontend
     healthcheck:
       test: ["CMD", "caddy", "version"]
       interval: 30s
