--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ DATA_PATH=./data
 # API Keys and Authentication
 GEMINI_API_KEY=your_gemini_api_key_here
 SMTP_PASSWORD=your_smtp_password_here
+JWT_SECRET_KEY=your_jwt_secret_key_here
 
 # Caddy Configuration
 DOMAIN=localhost
