add custom email domain

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,24 @@ GEMINI_API_KEY=your_gemini_api_key_here
 SMTP_PASSWORD=your_smtp_password_here
 JWT_SECRET_KEY=your_jwt_secret_key_here
 
+# Email Service Configuration
+EMAIL_PROVIDER=aws_ses
+EMAIL_SMTP_SERVER=email-smtp.us-east-1.amazonaws.com
+EMAIL_SMTP_PORT=587
+EMAIL_SMTP_USERNAME=your_aws_ses_username_here
+EMAIL_SMTP_PASSWORD=your_aws_ses_password_here
+EMAIL_AWS_REGION=us-east-1
+
+# Email Addresses
+EMAIL_FROM_EDITOR=editor@dailyscribe.news
+EMAIL_FROM_ADMIN=admin@dailyscribe.news
+EMAIL_FROM_SUPPORT=support@dailyscribe.news
+
+# Email Settings
+EMAIL_RATE_LIMIT=14
+EMAIL_RETRY_ATTEMPTS=3
+EMAIL_TIMEOUT=30
+
 # Caddy Configuration
 DOMAIN=localhost
 CADDY_ADMIN=0.0.0.0:2019
