--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ GEMINI_API_KEY=your_gemini_api_key_here
 SMTP_PASSWORD=your_smtp_password_here
 JWT_SECRET_KEY=your_jwt_secret_key_here
 
-# Email Service Configuration
+# Email Service Configuration - DEPRECATED
 EMAIL_PROVIDER=aws_ses
 EMAIL_SMTP_SERVER=email-smtp.us-east-1.amazonaws.com
 EMAIL_SMTP_PORT=587
