--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,25 +10,9 @@ services:
     image: daily-scribe:latest
     container_name: daily-scribe-app
     restart: unless-stopped
+    env_file:
+      - .env
     environment:
-      - DB_PATH=/data/digest_history.db
-      - DB_TIMEOUT=${DB_TIMEOUT:-30}
-      - FRONTEND_URL=${FRONTEND_URL:-https://dailyscribe.news}
-      - GEMINI_API_KEY=${GEMINI_API_KEY}
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
-      - SMTP_PASSWORD=${SMTP_PASSWORD}
-      - EMAIL_PROVIDER=${EMAIL_PROVIDER:-aws_ses}
-      - EMAIL_SMTP_SERVER=${EMAIL_SMTP_SERVER:-email-smtp.us-east-1.amazonaws.com}
-      - EMAIL_SMTP_PORT=${EMAIL_SMTP_PORT:-587}
-      - EMAIL_SMTP_USERNAME=${EMAIL_SMTP_USERNAME}
-      - EMAIL_SMTP_PASSWORD=${EMAIL_SMTP_PASSWORD}
-      - EMAIL_AWS_REGION=${EMAIL_AWS_REGION:-us-east-1}
-      - EMAIL_FROM_EDITOR=${EMAIL_FROM_EDITOR:-editor@dailyscribe.news}
-      - EMAIL_FROM_ADMIN=${EMAIL_FROM_ADMIN:-admin@dailyscribe.news}
-      - EMAIL_FROM_SUPPORT=${EMAIL_FROM_SUPPORT:-support@dailyscribe.news}
-      - EMAIL_RATE_LIMIT=${EMAIL_RATE_LIMIT:-14}
-      - EMAIL_RETRY_ATTEMPTS=${EMAIL_RETRY_ATTEMPTS:-3}
-      - EMAIL_TIMEOUT=${EMAIL_TIMEOUT:-30}
       - PYTHONPATH=/app/src:/app
       - PYTHONUNBUFFERED=1
       - PYTHONDONTWRITEBYTECODE=1
@@ -56,25 +40,9 @@ services:
     image: daily-scribe-cron:latest
     container_name: daily-scribe-cron
     restart: unless-stopped
+    env_file:
+      - .env
     environment:
-      - DB_PATH=/data/digest_history.db
-      - FRONTEND_URL=${FRONTEND_URL:-https://dailyscribe.news}
-      - DB_TIMEOUT=${DB_TIMEOUT:-30}
-      - GEMINI_API_KEY=${GEMINI_API_KEY}
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
-      - SMTP_PASSWORD=${SMTP_PASSWORD}
-      - EMAIL_PROVIDER=${EMAIL_PROVIDER:-aws_ses}
-      - EMAIL_SMTP_SERVER=${EMAIL_SMTP_SERVER:-email-smtp.us-east-1.amazonaws.com}
-      - EMAIL_SMTP_PORT=${EMAIL_SMTP_PORT:-587}
-      - EMAIL_SMTP_USERNAME=${EMAIL_SMTP_USERNAME}
-      - EMAIL_SMTP_PASSWORD=${EMAIL_SMTP_PASSWORD}
-      - EMAIL_AWS_REGION=${EMAIL_AWS_REGION:-us-east-1}
-      - EMAIL_FROM_EDITOR=${EMAIL_FROM_EDITOR:-editor@dailyscribe.news}
-      - EMAIL_FROM_ADMIN=${EMAIL_FROM_ADMIN:-admin@dailyscribe.news}
-      - EMAIL_FROM_SUPPORT=${EMAIL_FROM_SUPPORT:-support@dailyscribe.news}
-      - EMAIL_RATE_LIMIT=${EMAIL_RATE_LIMIT:-14}
-      - EMAIL_RETRY_ATTEMPTS=${EMAIL_RETRY_ATTEMPTS:-3}
-      - EMAIL_TIMEOUT=${EMAIL_TIMEOUT:-30}
       - PYTHONPATH=/app/src:/app
       - PYTHONUNBUFFERED=1
       - PYTHONDONTWRITEBYTECODE=1
