Add elasticsearch support and simple search page

--- a/.env.example
+++ b/.env.example
@@ -39,6 +39,15 @@ TZ=UTC
 LOG_LEVEL=info
 DEBUG=false
 
+# Elasticsearch Configuration
+ELASTICSEARCH_ENABLED=true
+ELASTICSEARCH_HOST=localhost
+ELASTICSEARCH_PORT=9200
+ELASTICSEARCH_INDEX_PREFIX=daily_scribe
+ELASTICSEARCH_TIMEOUT=30
+ELASTICSEARCH_MAX_RETRIES=3
+ELASTICSEARCH_RETRY_ON_TIMEOUT=true
+
 # Development Settings (uncomment for development)
 # DEBUG=true
 # LOG_LEVEL=debug
