--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,17 @@ DB_TIMEOUT=30
 DATA_PATH=./data
 
 # API Keys and Authentication
+# LLM summarization (free-tier first, OpenAI last): at least one required
 GEMINI_API_KEY=your_gemini_api_key_here
+OPENAI_API_KEY=your_openai_api_key_here
+# Optional free-tier providers (used before paid OpenAI)
+# GROQ_API_KEY=your_groq_api_key_here
+# DEEPSEEK_API_KEY=your_deepseek_api_key_here
+# OPENROUTER_API_KEY=your_openrouter_api_key_here
+# Optional local fallback
+# OLLAMA_HOST=http://localhost:11434
+# Override model for testing (e.g. ollama/llama3.1)
+# LLM_MODEL_OVERRIDE=
 SMTP_PASSWORD=your_smtp_password_here
 JWT_SECRET_KEY=your_jwt_secret_key_here
 
