--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ requests>=2.25.0
 beautifulsoup4>=4.9.0
 schedule>=1.1.0
 python-dotenv>=0.19.0
-google-generativeai==0.8.5
 pydantic>=2.0.0
 openai
 numpy
@@ -18,3 +17,5 @@ resend
 elasticsearch>=8.11.0
 elasticsearch-dsl>=8.11.0
 htmlmin>=0.1.12
+litellm>=1.30.0
+instructor>=1.0.0
